gitignore to build files

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,8 @@ compile_commands.json
 CMakeLists.txt.user*
 .vscode
 main.cpp
+CMakeCache.txt
+CMakeFiles/
+tests/CMakeFiles/
+tools/CMakeFiles/
+DartConfiguration.tcl
