--- a/.gitignore
+++ b/.gitignore
@@ -75,7 +75,7 @@ tools/llvm-slicer
 git-version.h
 
 #build directory
-build
+build*
 
 #sourcetrail files
 dg.srctrl*
@@ -83,3 +83,4 @@ dg.srctrl*
 compile_commands.json
 
 CMakeLists.txt.user*
+.vscode/
