--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -145,6 +145,7 @@ endif (HAVE_SVF)
 
 	add_executable(llvm-vr-dump llvm-vr-dump.cpp)
 	target_link_libraries(llvm-vr-dump
+				PRIVATE dganalysis
 				PRIVATE ${llvm_core}
 				PRIVATE ${llvm_irreader}
 				PRIVATE ${llvm_analysis}
